--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    --clr-primary: hsl(231, 90%, 68%);
+    --clr-secondary: hsl(156, 100%, 79%);
+    --clr-tertiary: hsl(0, 0%, 95%);
+    --clr-text:hsl(0, 0%, 13%);
+    --clr-white: hsl(0, 0%, 100%);
+  
+    --clr-progra-bg: hsl(152, 65%, 91%);
+    --clr-progra: hsl(139, 47%, 55%);
+    --clr-front-bg: hsl(198, 100%, 95%);
+    --clr-front: hsl(202, 92%, 75%);
+    --clr-data-bg: hsl(82, 61%, 93%);
+    --clr-data: hsl(81, 57%, 58%);
+    --clr-devo-bg: hsl(357, 85%, 95%);
+    --clr-devo: hsl(1, 66%, 65%);
+    --clr-ux-bg: hsl(318, 63%, 95%);
+    --clr-ux: hsl(315, 60%, 65%);
+    --clr-movil-bg: hsl(44, 100%, 93%);
+    --clr-movil: hsl(43, 100%, 51%);
+    --clr-innova-bg: hsl(28, 100%, 94%);
+    --clr-innova: hsl(27, 100%, 58%);
+  
+        
+    --fs-title:2.5rem ; /* 40*/
+    --fs-subtitles:2rem ; /* 32 */
+    --fs-regular: 1.125rem; /* 18 */
+    --fs-small:1rem ;/*16*/
+  
+       
+    --ff-primary:"Prata", serif;
+    --ff-secondary:"Montserrat", serif;
+    
+     
+    --fw-900:900;/* bold */
+    --fw-500:500;/* medium */
+    --fw-400:400;/* regular */
+    --fw-100:100;/* thin */
+  }
+  
+   /********************************* General style *********************************/
+  
+   body{
+    font-family: var(--ff-secondary);
+    font-weight: var(--fw-300);
+    font-size: var(--fs-regular);
+    color: var(--clr-text);
+    line-height: 150%;
+  }
+  h1{
+    font-family: var(--ff-primary);
+    font-weight: var(--fw-400);
+    font-size: var(--fs-title);
+    color: var(--clr-primary);
+  }
+  h2{
+    font-family: var(--ff-primary);
+    font-size: var(--fs-subtitles);
+    font-weight: var(--fw-500);
+  }
+  .container{
+    max-width: 1440px; 
+    margin-inline: auto;
+  }
+
+  .signForm-inputs label, .signForm-optionList label{
+    font-size: var(--fs-regular);
+    font-weight: var(--fw-500);
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
