--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,16 +1,17 @@
 .signForm{
     display: flex;
-    justify-content: center;
-    margin: 80px 0;
+    justify-content:center;
+    gap: 40px;
+    margin: 10px 0;
 }
 
 .signForm form{
-    max-width: 80%;
+    max-width: 70%;
     background-color: #f6f6f6;
     box-shadow: 7px 7px 15px 0px #00000014;
     border-radius: 20px;
     padding: 8px 100px;
-    gap: 1rem;
+    gap: 1rem;;
 }
 
 .signForm h2{
